[package]
name = "pii-removal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.22", features = ["derive"] }
flate2 = "1.0.24"
log = "0.4.17"
log4rs = "1.2.0"
regex = "1.7.0"
